--- a/src/components/SubscribeForm/SubscribeForm.module.scss
+++ b/src/components/SubscribeForm/SubscribeForm.module.scss
@@ -3,7 +3,6 @@
 
 .container {
   background-color: $color-gray-bg;
-  width: 100%;
   @include padding-equal(0.5);
   @include margin-bottom(0.5);
 
@@ -52,7 +51,6 @@
 @include breakpoint-sm {
   .container {
     border-radius: 5px;
-    width: unset;
     @include margin-bottom(1);
   }
 }
